@@ -224,7 +224,9 @@ regopt(Prog *p)
 		 */
 		case AFMOVDP:
 		case AFMOVFP:
+		case AFMOVLP:
 		case AFMOVVP:
+		case AFMOVWP:
 		case ACALL:
 			for(z=0; z<BITS; z++)
 				addrs.b[z] |= bit.b[z];
